testing for cicd

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "video-conference-app",
+  "name": "front-end",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:prod": "vite --mode production",
     "build": "vite build",
-    "preview": "vite preview"
+    "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production",
+    "preview": "vite preview",
+    "preview:prod": "vite preview --mode production"
   },
   "dependencies": {
     "face-api.js": "^0.22.2",
@@ -14,7 +18,7 @@
     "mediasoup-client": "^3.7.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.8.1",
+    "socket.io-client": "^4.7.2",
     "react-markdown": "^8.0.7",
     "tailwindcss": "^3.3.3"
   },
@@ -22,10 +26,10 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
-    "vite": "^5.4.10"
+    "vite": "^4.4.5"
   }
 }
