--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,13 +13,14 @@
     "preview:prod": "vite preview --mode production"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "face-api.js": "^0.22.2",
     "lucide-react": "^0.294.0",
     "mediasoup-client": "^3.7.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^4.7.2",
     "react-markdown": "^8.0.7",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
